# go_it_web_module_programs

./: README.md
1_st_lesson/: class_diagram_uml.py
1_st_lesson/abstract_class/: abstract_class_common_interface.py  abstract_class_expansion.py  abstract_class_property.py  abstract_class_try_create_obj_abst_c.py
2_nd_lesson/black/: pyproject.toml
2_nd_lesson/docker_folder/add/: dockerfile  my_text.txt  using_add.py
2_nd_lesson/docker_folder/entrypoint/: Dockerfile  entrypoint_command.py
2_nd_lesson/docker_folder/env/: dockerfile  env_command.py
2_nd_lesson/docker_folder/exposed/: dockerfile  exposed_command.py
2_nd_lesson/docker_folder/from_copy_cmd/: Dockerfile  from_command.py
2_nd_lesson/docker_folder/label/: dockerfile  using_label.py
2_nd_lesson/docker_folder/volume/: dockerfile  volume_command.py
2_nd_lesson/pipenv/Project_B/: Pipfile
2_nd_lesson/poetry/poetry_project_learn/: pyproject.toml
2_nd_lesson/poetry/poetry_project_test/test/: pyproject.toml
CodeCrafters_assistant/: README.md  setup.py
CodeCrafters_assistant/CodeCrafters_assistant/: contact_book.py  notes.py
different_scripts/: api.py  example_tdd.py  iterator.py  pdb_test.py
different_scripts/SOLID/: single_responsibility.py
different_scripts/abstract_class/: abstract_class_isinstance.py  abstract_class_issubclass.py  abstract_class_metaclass.py  abstract_class_no_abstractmethod.py
different_scripts/poetry/poetry_project_another_comp/poetry-project/: pyproject.toml
different_scripts/static_analizer/: my_py.py  radon_test.py
different_scripts/typing/: generics.py
(+12 files in other folders)
