[tool.poetry]
name = "test"
version = "1.0.0"
description = "Knowledge_test"
authors = ["Vadym <vadkor@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
